--- a/Salão/index.html
+++ b/Salão/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,30 +11,97 @@
         <div class="menu">
             <img id="logo" src="logo.jpg">
             <nav>
-                <a>text</a>
-                <a>text</a>
-                <a>text</a>
-                <a>text</a>
+                <ul id ="bar-navigation">
+                    <li>
+                        <a class ="bar-link" href ="#about">Sobre</a>
+                    </li>
+                    <li>
+                        <a class ="bar-link" href="#">Salão</a>
+                    </li>
+                    <li>
+                        <a class ="bar-link" href="#">Serviços</a>
+                    </li>
+                    <li>
+                        <a class ="bar-link" href="#">Instagram</a>
+                    </li>
+                </ul>
             </nav>
         </div>
     </header>
 
     <main>
         <section class="first_page">
-            <div class="setence_and_scheduling">
-                <div class="setence">
-                    <h1>TRANSFORME SEU <b>VISUAL</b> E LIBERTE SUA <b>BELEZA</b></h1>
-                </div>
-        
-                <div class="scheduling">
-                    <button><a href="https://wa.me/5531989690194">AGENDE AQUI</a></button> 
+            <div class="setence">
+                <div class="h1setence">
+                <h1>TRANSFORME SEU <b>VISUAL</b> E LIBERTE SUA <b>BELEZA</b></h1>
                 </div>
             </div>
-    
+
+            <div class="scheduling">
+                    <a class="whatsapp" href ="https://wa.me/5531989690194">AGENDE AQUI</a>
+            </div>
+
             <div class="example">
-                <img id="example" src="example1 edit.jpg">
+                <img id="exampleimg" src="example1 edit.jpg">
             </div>
         </section>
+
+        <section id="about">
+            <div id="salao">
+                <img src="salao.jpg">
+            </div>
+            <div #about class="about-text">
+                <p>
+                    No coração de nossa cidade, encontra-se um refúgio de beleza e bem-estar onde cada cliente é recebido com calor e cuidado excepcional. Nosso salão de beleza é mais do que um local para transformações estéticas; é um espaço onde a autoestima é elevada e a beleza interior é tão valorizada quanto a exterior.
+                </p>
+                <br>
+                <p>
+                    Aqui, a qualidade é nossa prioridade, e isso se reflete em cada aspecto de nosso salão, desde os produtos que usamos até as técnicas que empregamos. Nossa missão é realçar a beleza natural de cada cliente, garantindo que saiam de nossas instalações não apenas com uma aparência deslumbrante, mas também com uma sensação renovada de confiança e bem-estar.
+                </p>
+                <br>
+                <p>
+                    Visite-nos e descubra o que torna nosso salão de beleza tão especial. Estamos aqui para tornar sua experiência de beleza não apenas excepcional, mas também memorável.       
+                </p>
+            </div>
+        </section>
+
+        <section class="services">
+            <div id="list-services">
+                <ul>
+                    <li>
+                        Corte    
+                    </li>
+                    <li>
+                        Escova     
+                    </li>
+                    <li>
+                        Tintura                
+                    </li>
+                    <li>
+                        Hidratação                      
+                    </li>
+                    <li>
+                        Tratamentos capilares                  
+                    </li>
+                    <li>
+                        Manicure e pedicure               
+                    </li>
+                    <li>
+                        Sobrancelha         
+                    </li>
+                    <li>
+                        Penteados       
+                    </li>
+                    <li>
+                        Maquiagem      
+                    </li>
+                    <li>
+                        Dia de noiva    
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
